force-app/main/default/objects/ssot__ApplicationRecommender__dlm/fields/ssot__RecommendationStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecommendationStatus__c</fullName>
    <label>Recommendation Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecommendationStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>