force-app/main/default/objects/ssot__ApplicationRecommender__dlm/fields/ssot__rel_1720291152559_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291152559_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationRecommender_RecommenderId_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ApplicationRecommender_RecommenderId_rel</relationshipLabel>
    <relationshipName>rel_1720291152559_end</relationshipName>
    <type>Lookup</type>
</CustomField>