force-app/main/default/objects/ssot__ApplicationRecommender__dlm/fields/ssot__SubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubmittedDate__c</fullName>
    <label>Submitted Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubmittedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>